--- a/BulkyWeb/Areas/Admin/Views/Category/Create.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Category/Create.cshtml
@@ -14,6 +14,7 @@
 	</div>
 	<div class="card-body p-4">
 		<form method="post" class="row">
+			<input asp-for="Id" hidden />
 			@* <span asp-validation-sumary="ModelOnly"></span> *@
 			<div class="border p-3">
 				<div class="form-floating col-12 py-2">
